--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,22 @@ data/20150101.as-rel.txt
 data/20150101.ppdc-ases.txt
 data/csv2graphml.pl
 data/parseASLinks.pl
-
+lib/hotwarmcold_w1.m
 lib/matlab_bgl/
+lib/li13/
+lib/snm/
+
+YTprobs.m
+data/VoD.svg
+data/VoD_data.svg
+data/YT.svg
+data/YT_data.svg
+data/bladaten_nurskala.tex
+data/unadaId_timestamp_videoId.txt
+hotwarmcold_hitrate.m
+importsvg.m
+importtex.m
+mainLargeScaleStudy.m
+maintommy.m
+maintommyanalysis.m
+
