--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,18 @@ importtex.m
 mainLargeScaleStudy.m
 maintommy.m
 maintommyanalysis.m
-
+as_rel.m
+ciplot.m
+evalVideos.m
+evaluate.m
+hotwarm_cold.main
+main.m
+mainCache.m
+mainRBH.m
+mainRBH2.m
+mainSEConD.m
+matlab_bgl.m
+parRBH.m
+parRBHORST.m
+parSECD.m
+printfig.m
